--- a/input.css
+++ b/input.css
@@ -39,6 +39,7 @@
 @media (max-width: 576px){
     #hero{
         background-image: url('images/mobile/image-hero.jpg');
+        background-position: center;
     }
     }
     
@@ -54,7 +55,7 @@
 
     .hamburger-top,
     .hamburger-middle,
-    .hamburger-bottom{
+    .hamburger-bottom {
         position: absolute;
         width: 24px;
         height: 2px;
@@ -86,5 +87,5 @@
     }
 
     .open .hamburger-bottom {
-        transform: rotate(-45deg) translateY(6px) translateX(-6px)
+        transform: rotate(-45deg) translateY(6px) translateX(-6px);
     }
